- Editing gnuplot commands: fix for accented characters
- Reading CSV files: fix bug in parser for date strings
- 3-D plots under X11: if xterm is not found, try rxvt
- NLS: ensure messages printed to the console are not in utf8
- Loosen up a little on "Appending" data: allow for the situation
  where the sample range for the added data is not identical
  to the original range

10/01/2003 version 1.1.3
- Fix crashing bug in viewing dataset info
- Improve formatting of "influential observations" test output
  for non-English locales
- Correct the sign of the fractional integration parameter
  estimate in the periodogram command ("pergm")
- Give first-time gretl users a chance to select a gretl
  "user directory" (with ~/gretl being the default)
- Fix problem with running a script in the gretl console, when
  the script begins with comments plus blank lines
- Brighten up some menus with stock icons (gtk2 only)
- Use gtksourceview to do syntax highlighting for scripts
  (gtk2 version only)
- Change function of main-window toolbar edit icon: from launch
  an external editor to start a new script
- Fix bug in meantest command: the -o flag was doing the 
  opposite of what was stated in the manual
- Fix bug in built-in spreadsheet in re. adding variables or
  observations 
- Ensure that the listing of variables in the main window
  is updated after running a script
- Add facility to exclude named observations with smpl command
  (e.g. smpl -r obs!="USA")
- Add "nobs()" function in genr: gives the number of valid
  (non-missing) observations for a data series
- Improve placement of observation labels on graphs
- Improvements to gnumeric data importer
- Add facility for generating 3-D data plots
- Add "import ASCII" data option

09/09/03 version 1.1.2
- Fix bug in time-series plot from popup menu in main window
- Fix build problem: "make install" could fail to install the
  GUI program under some conditions (thanks to Dirk Eddelbuettel
  for spotting this)