@@ -966,14 +966,15 @@ void gui_errmsg (const int errcode)
 {
     char *msg = get_gretl_errmsg();
 
-    if (msg[0] != '\0') 
+    if (*msg != '\0') {
 	errbox(msg);
-    else {
+    } else {
 	msg = get_errmsg(errcode, errtext, NULL);
-	if (msg != NULL)
+	if (msg != NULL) {
 	    errbox(msg);
-	else
+	} else {
 	    errbox(_("Unspecified error"));
+	}
     }
 }
 
@@ -1170,6 +1171,9 @@ void do_forecast (GtkWidget *widget, dialog_t *ddata)
     if (fr == NULL) {
 	errbox(_("Failed to generate fitted values"));
 	gretl_print_destroy(prn);
+    } else if (fr->err) {
+	gui_errmsg(fr->err);
+	free_fit_resid(fr);
     } else {
 	err = text_print_fcast_with_errs (fr, 
 					  &Z, datainfo, prn,
