@@ -12,6 +12,8 @@ version 1.1.4
 - Loosen up a little on "Appending" data: allow for the situation
   where the sample range for the added data is not identical
   to the original range
+- Fixes for printout of fitted, actual and residual, and for
+  forecasts with standard errors, in the case of missing data
 
 10/01/2003 version 1.1.3
 - Fix crashing bug in viewing dataset info
